[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "taskgen-ai"
version = "3.3.10"
authors = [
  { name="John Tan Chong Min", email="tanchongmin@gmail.com" },
]
description = "TaskGen Simbian. A Task-based agentic framework building on StrictJSON outputs by LLM agents. Cybersecurity-focused version."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["openai>=1.59.6",
"langchain", "dill>=0.3.9", "termcolor>=3.1.0", "requests",
"pypdf~=5.8.0", "python-docx", "pandas", "xlrd", "chromadb>=1.0.15",
"asyncio", "opentelemetry-sdk~=1.32.1"]

[project.urls]
Homepage = "https://github.com/simbianai/taskgen"
Issues = "https://github.com/simbianai/taskgen/issues"
